# VexDB-Crux

./: README.md  convert_sql.py  fbin2csv.py  prepare_data.sh
openGauss-vector/: .gitignore  CMakeLists.txt  GNUmakefile.in  GNUmakefile.in_for_llt  build.sh  config.sh  configure  configure.in  distribute_errmsg.txt  escan.txt
openGauss-vector/Tools/memory_check/: asan_report.pl  setup_memchk.sh
openGauss-vector/cmake/src/: build_function.cmake  build_options.cmake  buildfunction.sh  set_thirdparty_path.cmake
openGauss-vector/cmake/src/config-in/: pg_config.h.in  pg_config.h.in.nocheck.aarch64  pg_config.h.in.nocheck.x86_64  pg_config_nocheck.h.in
openGauss-vector/config/: install-sh
openGauss-vector/contrib/crux_repair/: Makefile  crux_repair--1.0.sql  crux_repair.control  crux_repair.cpp
openGauss-vector/contrib/dblink/: check_dblink_libpq.sh  check_dblink_odbc.sh
openGauss-vector/contrib/ndpplugin/: ndpplugin.control
openGauss-vector/contrib/oid2name/: oid2name.cpp
openGauss-vector/contrib/pagehack/: pagehack.cpp
openGauss-vector/contrib/pg_archivecleanup/: pg_archivecleanup.cpp
openGauss-vector/contrib/pg_check_replslot/: pg_check_replslot.cpp
openGauss-vector/contrib/pg_standby/: pg_standby.cpp
openGauss-vector/contrib/pg_xlogdump/: pg_xlogdump.cpp  rmgrdesc.cpp
openGauss-vector/contrib/pgbench/: pgbench.cpp
openGauss-vector/contrib/qasp_repair/: Makefile  qasp_repair--1.0.sql  qasp_repair.control  qasp_repair.cpp
openGauss-vector/contrib/security_plugin/: gs_policy_plugin.cpp
openGauss-vector/contrib/vacuumlo/: vacuumlo.cpp
openGauss-vector/doc/: Makefile
openGauss-vector/doc/src/sgml/: Makefile  acronyms.sgmlin  add-node.sgmlin  arch-dev.sgmlin  auto-explain.sgmlin  backup.sgmlin  bki.sgmlin  charset.sgmlin  client-auth.sgmlin  config.sgmlin  datatype.sgmlin  dblink.sgmlin  dfunc.sgmlin  docguide.sgmlin  dummy-seclabel.sgmlin  ecpg.sgmlin  func.sgmlin  installation.sgmlin  libpq.sgmlin  maintenance.sgmlin  manage-ag.sgmlin  monitoring.sgmlin  oid2name.sgmlin  pgfreespacemap.sgmlin  pgtestfsync.sgmlin  pgupgrade.sgmlin  pgxc_ctl-ref.sgmlin  pgxcmonitor.sgmlin  postgres.sgmlin  problems.sgmlin  reference.sgmlin  release-7.4.sgmlin  (+17 more)
openGauss-vector/docker/dockerfiles/: buildDockerImage.sh  create_master_slave.sh
openGauss-vector/docker/upgrade/: upgrade_common.sh
openGauss-vector/liteom/: install.sh  uninstall.sh  upgrade_common.sh
openGauss-vector/simpleInstall/: install.sh
openGauss-vector/src/: .gitignore  CMakeLists.txt  Makefile.global.in  Makefile.global.in_for_llt  get_PlatForm_str.sh
openGauss-vector/src/gausskernel/: CMakeLists.txt  Makefile  Makefile_for_llt
openGauss-vector/src/gausskernel/storage/access/annvector/: CMakeLists.txt  Makefile  ann_utils.cpp  annkmeans.cpp  floatvector.cpp  halfvec.cpp  pq.cpp  quantizer.cpp  sparsevector.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/: CMakeLists.txt  Makefile  architecture.cpp  code_distance_template.cpp  distance.cpp  distances_simd_template.cpp  rabitq_template.cpp  template.cpp  template_half.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv8/: CMakeLists.txt  Makefile
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv8/neon/: CMakeLists.txt  Makefile  armv8neon.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv8/sve/: CMakeLists.txt  Makefile  armv8sve.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv8/sve2/: CMakeLists.txt  Makefile  armv8sve2.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv9/: CMakeLists.txt  Makefile
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv9/neon/: CMakeLists.txt  Makefile  armv9neon.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv9/sme/: CMakeLists.txt  Makefile  armv9sme.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv9/sme2/: CMakeLists.txt  Makefile  armv9sme2.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv9/sve/: CMakeLists.txt  Makefile  armv9sve.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/armv9/sve2/: CMakeLists.txt  Makefile  armv9sve2.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/general/: CMakeLists.txt  Makefile  general.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/x86/: CMakeLists.txt  Makefile
openGauss-vector/src/gausskernel/storage/access/annvector/distance/x86/avx/: CMakeLists.txt  Makefile  avx.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/x86/avx512/: CMakeLists.txt  Makefile  avx512.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/distance/x86/sse/: CMakeLists.txt  Makefile  sse.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/module/: CMakeLists.txt  Makefile  bulkbuf_smgr.cpp  timer.cpp  vector_smgr.cpp
openGauss-vector/src/gausskernel/storage/access/annvector/xlog/: CMakeLists.txt  Makefile  log_manager.cpp
openGauss-vector/src/gausskernel/storage/access/bm25/: CMakeLists.txt  Makefile  bm25.cpp  bm25_doc_store.cpp  bm25_expr.cpp  bm25_inspect.cpp  bm25_internal.cpp  bm25_inverted_list.cpp  bm25_parameters.cpp  bm25_parse.cpp  bm25_scan.cpp  bm25_score.cpp  bm25_token_index.cpp  bm25_utils.cpp  bm25xlog.cpp
openGauss-vector/src/gausskernel/storage/access/bm25/tokenizer/: CMakeLists.txt  Makefile  dict_jieba.cpp  dsnowball.cpp  token_pool.cpp  tokenizer.cpp
openGauss-vector/src/gausskernel/storage/access/diskann/: CMakeLists.txt  Makefile  disk_pq.cpp  diskann.cpp  diskann_build.cpp  diskann_change.cpp  diskann_inspect.cpp  diskann_internal.cpp  diskann_scan.cpp  diskann_utils.cpp  diskannxlog.cpp  math_utils.cpp  partition.cpp
openGauss-vector/src/gausskernel/storage/access/diskann/storage_interface/: CMakeLists.txt  Makefile  disk_store.cpp  mem_store.cpp
openGauss-vector/src/include/: gaussdb_version.h  gs_thread.h  pg_config.h.in
openGauss-vector/src/test/ut/demo/: CMakeLists.txt
(+637 files in other folders)
